<resources>
    <string name="app_name">Food Finder</string>
    <string name="tv_main">Lorem ipsum dolor sit amet consectetur adipiscing elit, sollicitudin nulla laoreet platea aptent purus, integer vestibulum dis lectus lacus eget.</string>
    <string name="tv_hint_kalori">Kalori (cal)</string>
    <string name="tv_kalori">Masukan kalori 0–10.000</string>
    <string name="tv_karbo">Masukan karbohidrat 0–10.000</string>
    <string name="tv_prot">Masukan protein 0–10.000</string>
    <string name="tv_lemak">Masukan lemak 0–100.000</string>
    <string name="tv_hint_karbo">Karbohidrat (gram)</string>
    <string name="tv_hint_prot">Protein (gram)</string>
    <string name="tv_hint_lemak">Lemak (gram)</string>
    <string name="tv_heading">Food Finder</string>
    <string name="txt_btn_cari">Cari</string>
    <string name="tab_rendah">Rendah</string>
    <string name="tab_sedang">Sedang</string>
    <string name="tab_tinggi">Tinggi</string>
    <string name="nutrition_title">Kebutuhan Nutrisimu :</string>
    <string name="calories">Kalori</string>
    <string name="carbohydrate">Karbohidrat</string>
    <string name="protein">Protein</string>
    <string name="fat">Lemak</string>
    <string name="output_cal">20 cal</string>
    <string name="output_cab">124 gr</string>
    <string name="output_protein">89 gr</string>
    <string name="output_fat">29 gr</string>
    <string name="tab_layout_description">Tabs Food and Beverages</string>
    <string name="temp_cal">%1$s cal</string>
    <string name="temp_g">%1$s gr</string>
    <string name="gambar_makanan_minuman">Gambar Makanan/Minuman</string>
    <string name="hasil_prediksi">Hasil : </string>
    <string name="karbo">Karbo</string>
    <string name="error">Error</string>
    <string name="oke">Oke</string>
    <string name="empty_data">Failed to predict data, Please input all data</string>
    <string name="failed_predict">Failed to predict data, Unknown error happened</string>
    <string name="search">Search</string>
    <string name="hero_title">Pengukuran Nutrisi Yang Dibutuhkan</string>
    <string name="hero_desc">Temukan berbagai makanan sesuai dengan kebutuhan nutrisimu</string>
    <string name="daftar_title">Makanan/Minuman dengan Nilai Kalori</string>
    <string name="fab_desc">button to search food with nutrition</string>
    <string name="item_image">Item Image</string>
</resources>