<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="9dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/tv_heading"
            android:src="@drawable/icon_food"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/galada"
            android:text="@string/tv_heading"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/header_image"
            app:layout_constraintStart_toEndOf="@id/header_image"
            app:layout_constraintTop_toTopOf="@id/header_image" />

        <TextView
            android:id="@+id/tv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/dosis_medium"
            android:text="@string/tv_main"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_mat_cal"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="37dp"
            android:hint="@string/tv_hint_kalori"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main">

            <EditText
                android:id="@+id/ed_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/dosis_medium"
                android:layout_marginTop="2dp"
                android:text="@string/tv_kalori"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_mat_karbo"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/tv_hint_karbo"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_mat_cal">

            <EditText
                android:id="@+id/ed_karbo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/dosis_medium"
                android:text="@string/tv_karbo"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_mat_prot"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/tv_hint_prot"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_mat_karbo">

            <EditText
                android:id="@+id/ed_prot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/dosis_medium"
                android:layout_marginTop="2dp"
                android:text="@string/tv_prot"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_mat_lem"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/tv_hint_lemak"
            app:boxCornerRadiusBottomEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_mat_prot">

            <EditText
                android:id="@+id/ed_lemak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/dosis_medium"
                android:text="@string/tv_lemak"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_cari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/txt_btn_cari"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_mat_lem" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>