<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="5dp"
    app:cardBackgroundColor="@color/primary"
    app:strokeWidth="3dp"
    app:strokeColor="@color/white"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/susu_sapi"/>

        <TextView
            android:id="@+id/name_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="12dp"
            android:textStyle="bold"
            android:fontFamily="@font/dosis_medium"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/img_item"
            app:layout_constraintStart_toEndOf="@id/img_item"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Susu Sapi"/>

        <TextView
            android:id="@+id/tv_status_calories_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="12dp"
            android:text="Status Kalori :"
            android:textStyle="bold"
            android:fontFamily="@font/dosis_medium"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/name_item"
            app:layout_constraintStart_toEndOf="@id/img_item"/>

        <TextView
            android:id="@+id/status_calories_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/dosis_medium"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_status_calories_item"
            app:layout_constraintStart_toEndOf="@id/tv_status_calories_item"
            app:layout_constraintBottom_toBottomOf="@id/tv_status_calories_item"
            tools:text="Normal"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="12dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/img_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status_calories_item"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="6dp"
                android:background="@drawable/bg_glass">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textSize="11sp"
                    android:fontFamily="@font/dosis_medium"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/calories_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output_cal"
                    android:fontFamily="@font/dosis_medium"
                    android:textSize="11sp"
                    android:textColor="#000"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="6dp"
                android:background="@drawable/bg_glass"
                android:layout_marginStart="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/karbo"
                    android:textSize="11sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:fontFamily="@font/dosis_medium"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/carbohydrate_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output_cab"
                    android:textSize="11sp"
                    android:fontFamily="@font/dosis_medium"
                    android:textColor="#000"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="6dp"
                android:background="@drawable/bg_glass"
                android:layout_marginStart="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:fontFamily="@font/dosis_medium"
                    android:textSize="11sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/protein_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output_protein"
                    android:textSize="11sp"
                    android:fontFamily="@font/dosis_medium"
                    android:textColor="#000"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="6dp"
                android:background="@drawable/bg_glass"
                android:layout_marginStart="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:fontFamily="@font/dosis_medium"
                    android:textSize="11sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/fat_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output_fat"
                    android:textSize="11sp"
                    android:fontFamily="@font/dosis_medium"
                    android:textColor="#000"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>