<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".recommendation.NutritionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:contentDescription="Back"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="21dp"
            android:textStyle="bold"
            android:fontFamily="@font/dosis_medium"
            android:text="Pengukuran Nutrisi"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/dosis_medium"
            android:text="@string/tv_main"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <LinearLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="28dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_glass"
            app:layout_constraintTop_toBottomOf="@id/tv_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_calories_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="14dp"
                android:hint="@string/tv_hint_kalori"
                android:textColor="@color/black"
                app:boxCornerRadiusBottomEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusTopStart="9dp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/dosis_medium"
                    android:text="@string/tv_kalori"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_carbohydrate_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/tv_hint_karbo"
                android:textColor="@color/black"
                app:boxCornerRadiusBottomEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusTopStart="9dp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_carbohydrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/dosis_medium"
                    android:text="@string/tv_karbo"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_protein_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/tv_hint_prot"
                android:textColor="@color/black"
                app:boxCornerRadiusBottomEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusTopStart="9dp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/dosis_medium"
                    android:text="@string/tv_prot"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_fat_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:hint="@string/tv_hint_lemak"
                android:textColor="@color/black"
                app:boxCornerRadiusBottomEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusTopStart="9dp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/dosis_medium"
                    android:text="@string/tv_lemak"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dosis_medium"
            android:text="@string/txt_btn_cari"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:backgroundTint="@color/primary"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>